--- a/solution2/css/solution2.css
+++ b/solution2/css/solution2.css
@@ -6,6 +6,7 @@ h1 {
   margin-top: 20px;
   margin-bottom: 60px;
   text-align: center;
+  font-size: 175%;
 }
 body {
 	font-family: arial, sans-serif
@@ -21,13 +22,14 @@ p {
  }
 .section {
 	width: 90px; 
-	height: 30px; 
+	height: 35px; 
 	text-align:center;
 	position:absolute; 
 	top:-1px; 
 	right:-1px; 
 	padding-top: 5px;
 	border: solid black 1px;
+	font-size: 125%;
 }
 #s1 {
 	background-color: #ff9999;
